--- a/meetings/170918.md
+++ b/meetings/170918.md
@@ -10,7 +10,7 @@
   - Frontend: Fabrice Bosshard, Igor Cetkovic
   - Backend: Fabian Bächli, Leonard Schütz
 
-- Frontend technology
+- Frontend technology:
 We decided to implement the frontend in React
-- Backend technology
+- Backend technology:
 We decided to implement the backend in Node.js
