updated project meeting files to new style guidlines

--- a/meetings/170904.md
+++ b/meetings/170904.md
@@ -8,19 +8,19 @@ This is the first meeting concerning this project.
 - Fabrice Bosshard
 
 ## Discussion
-### Defining the team-members
+### `Defining the team-members`
 - [Fabian Bächli](https://github.com/fabianbaechli/)
 - [Fabrice Bosshard](https://github.com/FabriceBosshard)
 - [Igor Cetkovic](https://github.com/bape234)
 - [Leonard Schütz](https://github.com/KCreate)
 
-### Brainstorming possible projects
+### `Brainstorming possible projects`
 The given requirement for the project was, that it has to have a real life use
 
-#### Web app
+#### `Web app`
 Focus on learning a frontend library
 - Note tool[:white_check_mark:]
 - Password manager[:x:]
 
-## Conclusion
+## `Conclusion`
 - We decided to build the online note tool.
