--- a/meetings/170918.md
+++ b/meetings/170918.md
@@ -1,16 +1,13 @@
 # 2017_09_18 Projectmeeting
 ## Present Members
-- Fabian Bächli
-- Igor Cetkovic
-- Fabrice Bosshard
-- Leonard Schütz
+- Fabian Bächli, Igor Cetkovic, Fabrice Bosshard, Leonard Schütz
 
 ## Discussion and conclusion
-- Task assignement
-  - Frontend: Fabrice Bosshard, Igor Cetkovic
-  - Backend: Fabian Bächli, Leonard Schütz
+### `Task assignement`
+- Frontend: Fabrice Bosshard, Igor Cetkovic
+- Backend: Fabian Bächli, Leonard Schütz
 
-- Frontend technology:
+### `Frontend technology`
 We decided to implement the frontend in React
 - Backend technology:
 We decided to implement the backend in Node.js
