--- a/meetings/171002.md
+++ b/meetings/171002.md
@@ -1,10 +1,11 @@
 # 2017_10_02 Projectmeeting
 ## Present members
-- Fabian Bächli
-- Fabrice Bosshard
-- Leonard Schütz
+- Fabian Bächli, Fabrice Bosshard, Leonard Schütz
+
+## Absent members
+- Igor Cetkovic
 
 ## Discussion and conclusion
-- Assignes tasks for today:
-  - Leonard / Fabian: Continued to work on frontend prototype
-  - Fabrice: Define and implement API for updating, adding and deleting data on server.
+### `Assignes tasks for today`
+- Leonard / Fabian: Continued to work on frontend prototype
+- Fabrice: Define and implement API for updating, adding and deleting data on server.
