finished project meeting for today

--- a/meetings/171023.md
+++ b/meetings/171023.md
@@ -2,11 +2,19 @@
 This meeting was held after the fall holidays.
 Today we have to submit our:
 - [project-meeting-files](https://github.com/fabianbaechli/online_note_tool/tree/master/meetings)
-- investors pitch (Powerpoint)
+- [investors pitch](https://bscw.tbz.ch/bscw/bscw.cgi/d24482069/Investor_Pitch.pptx)
 - [project-description](https://github.com/fabianbaechli/online_note_tool/blob/master/planning/projektauftrag_online_note_tool.pdf)
 
 ## Present members
 - Fabian Bächli, Igor Cetkovic, Leonard Schütz, Fabrice Bosshard
 
 ## Discussion
+### `SQL or No-SQL DB`
+- We were not sure if we should use a no-sql db technology. But it would be somethign new to learn and that is too much for now
+so we're rolling with mysql since we already know that.
 
+### `Igor Cetkovic, Fabrice Bosshard`
+- Learning Node.js
+
+### `Leonard Schütz, Fabian Bächli`
+- Further developing the frontend
