--- a/meetings/170925.md
+++ b/meetings/170925.md
@@ -6,7 +6,7 @@
 - Leonard Schütz
 
 ## Discussion and conclusion
-### `Assignes tasks for today`
+### `Assigned tasks for today`
 - Leonard: Further expanding the frontend prototype
 - Igor, Fabrice: Building a basic Node.js server which listens to a get req
 - Fabian: Building a basic react page which interact with a backend
